--- a/codes/08.intersection.ipynb
+++ b/codes/08.intersection.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data0/work/guozhonghao/mHSC_RNA_seq\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +111,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating: data/08.intersection/ (stored 0%)\n",
+      "updating: data/08.intersection/AB/ (stored 0%)\n",
+      "updating: data/08.intersection/AB/AB_SE.txt (deflated 87%)\n",
+      "updating: data/08.intersection/AB/AB_MXE.txt (deflated 82%)\n",
+      "updating: data/08.intersection/AB/AB_A3SS.txt (deflated 85%)\n",
+      "updating: data/08.intersection/AB/AB_A5SS.txt (deflated 84%)\n",
+      "updating: data/08.intersection/AB/AB_RI.txt (deflated 80%)\n",
+      "updating: data/08.intersection/BC/ (stored 0%)\n",
+      "updating: data/08.intersection/BC/BC_SE.txt (deflated 88%)\n",
+      "updating: data/08.intersection/BC/BC_MXE.txt (deflated 83%)\n",
+      "updating: data/08.intersection/BC/BC_A3SS.txt (deflated 86%)\n",
+      "updating: data/08.intersection/BC/BC_A5SS.txt (deflated 85%)\n",
+      "updating: data/08.intersection/BC/BC_RI.txt (deflated 81%)\n",
+      "updating: data/08.intersection/AC/ (stored 0%)\n",
+      "updating: data/08.intersection/AC/AC_SE.txt (deflated 87%)\n",
+      "updating: data/08.intersection/AC/AC_MXE.txt (deflated 82%)\n",
+      "updating: data/08.intersection/AC/AC_A3SS.txt (deflated 85%)\n",
+      "updating: data/08.intersection/AC/AC_A5SS.txt (deflated 83%)\n",
+      "updating: data/08.intersection/AC/AC_RI.txt (deflated 80%)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['cp', '-r', './data/08.intersection', './results/'], returncode=0)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# put all AB_ files into one folder, all BC_ files into another folder, etc.\n",
     "# create the folders\n",
@@ -123,7 +167,9 @@
     "                os.rename(\n",
     "                    os.path.join(root, f), os.path.join(f\"./data/08.intersection/{folder}\", f)\n",
     "                )\n",
-    "# copy ./data/08.intersection to ./results/\n",
+    "# copy ./data/08.intersection to ./results/, remove if ./results/08.intersection.zip exists\n",
+    "if os.path.exists(\"./results/08.intersection.zip\"):\n",
+    "    os.remove(\"./results/08.intersection.zip\")\n",
     "subprocess.run([\"zip\", \"-r\", \"./results/08.intersection.zip\", \"./data/08.intersection\"])\n",
     "subprocess.run([\"cp\", \"-r\", \"./data/08.intersection\", \"./results/\"])"
    ]
