✨ Finish GO and Kegg

--- a/codes/10.GO_Kegg.ipynb
+++ b/codes/10.GO_Kegg.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import subprocess\n",
-    "import multiprocessing as mp\n",
+    "import gseapy as gp\n",
+    "from gseapy.plot import barplot, dotplot\n",
     "\n",
     "# get the path to the root of the repository\n",
     "root_path = (\n",
@@ -20,8 +20,85 @@
     ")\n",
     "# set the working directory to the root of the repository\n",
     "os.chdir(root_path)\n",
-    "# create ./data/09.format_result/ if it doesn't exist\n",
-    "os.makedirs(\"data/09.format_result\", exist_ok=True)"
+    "os.makedirs(\"data/10.GO_Kegg\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_go_kegg_analysis(sample_name):\n",
+    "    # FILEPATH: /data0/work/guozhonghao/mHSC_RNA_seq/codes/10.GO_Kegg.ipynb\n",
+    "    df = pd.read_csv(f\"data/07.DEG/DEG_DESeq2_{sample_name}.tsv\", sep=\"\\t\", index_col=0)\n",
+    "    # filter log2FC > 2 and padj < 0.05\n",
+    "    df = df[(df[\"log2FoldChange\"] >= 2) & (df[\"pvalue\"] < 0.05)]\n",
+    "    gene_list = df[\"GeneName\"].tolist()\n",
+    "    gene_set = [\n",
+    "        \"KEGG_2019_Mouse\",\n",
+    "        \"GO_Biological_Process_2023\",\n",
+    "        \"GO_Cellular_Component_2023\",\n",
+    "        \"GO_Molecular_Function_2023\",\n",
+    "    ]\n",
+    "    os.makedirs(f\"data/10.GO_Kegg/{sample_name}\", exist_ok=True)\n",
+    "    kegg_df = gp.enrichr(\n",
+    "        gene_list=gene_list,\n",
+    "        organism=\"Mouse\",\n",
+    "        gene_sets=gene_set[0],\n",
+    "        outdir=f\"data/10.GO_Kegg/{sample_name}\",\n",
+    "        cutoff=0.05,\n",
+    "        no_plot=True,\n",
+    "        format=\"pdf\",\n",
+    "    )\n",
+    "    go_df = gp.enrichr(\n",
+    "        gene_list=gene_list,\n",
+    "        organism=\"Mouse\",\n",
+    "        gene_sets=gene_set[1:],\n",
+    "        outdir=f\"data/10.GO_Kegg/{sample_name}\",\n",
+    "        no_plot=True,\n",
+    "        format=\"pdf\",\n",
+    "    )\n",
+    "    barplot(\n",
+    "        kegg_df.res2d,\n",
+    "        title=f\"KEGG - {sample_name}\",\n",
+    "        xticklabels_rot=45,\n",
+    "        cutoff=0.05,\n",
+    "        ofname=f\"data/10.GO_Kegg/{sample_name}/KEGG_{sample_name}_barplot.pdf\",\n",
+    "    )\n",
+    "    dotplot(\n",
+    "        kegg_df.res2d,\n",
+    "        title=f\"KEGG - {sample_name}\",\n",
+    "        xticklabels_rot=45,\n",
+    "        cutoff=0.05,\n",
+    "        ofname=f\"data/10.GO_Kegg/{sample_name}/KEGG_{sample_name}_dotplot.pdf\",\n",
+    "    )\n",
+    "    barplot(\n",
+    "        go_df.results,\n",
+    "        title=f\"GO - {sample_name}\",\n",
+    "        group=\"Gene_set\",\n",
+    "        color=[\"#e41a1c\", \"#377eb8\", \"#4daf4a\"],\n",
+    "        column=\"P-value\",\n",
+    "        xticklabels_rot=45,\n",
+    "        cutoff=0.05,\n",
+    "        ofname=f\"data/10.GO_Kegg/{sample_name}/GO_{sample_name}_barplot.pdf\",\n",
+    "        figsize=(10, 8),\n",
+    "    )\n",
+    "    dotplot(\n",
+    "        go_df.results,\n",
+    "        title=f\"GO - {sample_name}\",\n",
+    "        x=\"Gene_set\",\n",
+    "        column=\"P-value\",\n",
+    "        xticklabels_rot=45,\n",
+    "        cutoff=0.05,\n",
+    "        ofname=f\"data/10.GO_Kegg/{sample_name}/GO_{sample_name}_dotplot.pdf\",\n",
+    "        figsize=(8, 8),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# apply the function to AB, AC, BC\n",
+    "for sample_name in [\"AB\", \"AC\", \"BC\"]:\n",
+    "    run_go_kegg_analysis(sample_name)"
    ]
   }
  ],
