--- a/codes/10.GO_Kegg.ipynb
+++ b/codes/10.GO_Kegg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,7 @@
     "    )\n",
     "    barplot(\n",
     "        kegg_df.res2d,\n",
+    "        column=\"P-value\",\n",
     "        title=f\"KEGG - {sample_name}\",\n",
     "        xticklabels_rot=45,\n",
     "        cutoff=0.05,\n",
@@ -68,6 +69,7 @@
     "    )\n",
     "    dotplot(\n",
     "        kegg_df.res2d,\n",
+    "        column=\"P-value\",\n",
     "        title=f\"KEGG - {sample_name}\",\n",
     "        xticklabels_rot=45,\n",
     "        cutoff=0.05,\n",
