🐛 Fix several bugs

--- a/codes/09.format_result.ipynb
+++ b/codes/09.format_result.ipynb
@@ -38,13 +38,13 @@
     "df[\"Lin-KO4 Mean\"] = df.loc[:, df.columns.str.startswith(\"Lin-KO4\")].mean(axis=1)\n",
     "# add a column named \"Lin-KO5 Mean\", calculate the mean of Lin-KO5_*\n",
     "df[\"Lin-KO5 Mean\"] = df.loc[:, df.columns.str.startswith(\"Lin-KO5\")].mean(axis=1)\n",
-    "deg_AB = pd.read_csv(\"data/07.DEG/DEG_DESeq2_AB.tsv\", sep=\"\\t\")\n",
+    "deg_AB = pd.read_csv(\"data/07.DEG/DEG_DESeq2_BvsA.tsv\", sep=\"\\t\")\n",
     "deg_AB = deg_AB[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_AB.columns = [str(col) + \"_WT/KO4\" for col in deg_AB.columns]\n",
-    "deg_AC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_AC.tsv\", sep=\"\\t\")\n",
+    "deg_AC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_CvsA.tsv\", sep=\"\\t\")\n",
     "deg_AC = deg_AC[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_AC.columns = [str(col) + \"_WT/KO5\" for col in deg_AC.columns]\n",
-    "deg_BC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_BC.tsv\", sep=\"\\t\")\n",
+    "deg_BC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_CvsB.tsv\", sep=\"\\t\")\n",
     "deg_BC = deg_BC[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_BC.columns = [str(col) + \"_KO4/KO5\" for col in deg_BC.columns]\n",
     "# join df and deg_AB by GeneID and GeneID_WT/KO4\n",
@@ -174,13 +174,13 @@
     "df_cpm[\"Lin-KO5 Mean\"] = df_cpm.loc[:, df_cpm.columns.str.startswith(\"Lin-KO5\")].mean(\n",
     "    axis=1\n",
     ")\n",
-    "deg_AB = pd.read_csv(\"data/07.DEG/DEG_DESeq2_AB.tsv\", sep=\"\\t\")\n",
+    "deg_AB = pd.read_csv(\"data/07.DEG/DEG_DESeq2_BvsA.tsv\", sep=\"\\t\")\n",
     "deg_AB = deg_AB[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_AB.columns = [str(col) + \"_WT/KO4\" for col in deg_AB.columns]\n",
-    "deg_AC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_AC.tsv\", sep=\"\\t\")\n",
+    "deg_AC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_CvsA.tsv\", sep=\"\\t\")\n",
     "deg_AC = deg_AC[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_AC.columns = [str(col) + \"_WT/KO5\" for col in deg_AC.columns]\n",
-    "deg_BC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_BC.tsv\", sep=\"\\t\")\n",
+    "deg_BC = pd.read_csv(\"data/07.DEG/DEG_DESeq2_CvsB.tsv\", sep=\"\\t\")\n",
     "deg_BC = deg_BC[[\"GeneID\", \"log2FoldChange\", \"pvalue\", \"padj\"]]\n",
     "deg_BC.columns = [str(col) + \"_KO4/KO5\" for col in deg_BC.columns]\n",
     "# join df_cpm and deg_AB by GeneID and GeneID_WT/KO4\n",
