--- a/codes/10.GO_Kegg.ipynb
+++ b/codes/10.GO_Kegg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "    # FILEPATH: /data0/work/guozhonghao/mHSC_RNA_seq/codes/10.GO_Kegg.ipynb\n",
     "    df = pd.read_csv(f\"data/07.DEG/DEG_DESeq2_{sample_name}.tsv\", sep=\"\\t\", index_col=0)\n",
     "    # filter log2FC > 2 and padj < 0.05\n",
-    "    df = df[(df[\"log2FoldChange\"] >= 2) & (df[\"pvalue\"] < 0.05)]\n",
+    "    df = df[(df[\"log2FoldChange\"].abs() >= 2) & (df[\"pvalue\"] < 0.05)]\n",
     "    gene_list = df[\"GeneName\"].tolist()\n",
     "    gene_set = [\n",
     "        \"KEGG_2019_Mouse\",\n",
@@ -99,7 +99,7 @@
     "\n",
     "\n",
     "# apply the function to AB, AC, BC\n",
-    "for sample_name in [\"AB\", \"AC\", \"BC\"]:\n",
+    "for sample_name in [\"BvsA\", \"CvsA\", \"CvsB\"]:\n",
     "    run_go_kegg_analysis(sample_name)"
    ]
   }
