--- a/codes/08.intersection.ipynb
+++ b/codes/08.intersection.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data0/work/guozhonghao/mHSC_RNA_seq\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +95,7 @@
     "# process deg_files containing AB with rmats_files containing A_vs_B, process deg_files containing AC with rmats_files containing A_vs_C, etc.\n",
     "for deg_file in deg_files:\n",
     "    for rmats_file in rmats_files:\n",
-    "        if deg_file.split(\"_\")[2].replace(\".tsv\", \"\") in rmats_file.split(\"/\")[\n",
+    "        if deg_file.split(\"_\")[2].replace(\".tsv\", \"\").replace(\"vs\",\"\")[::-1] in rmats_file.split(\"/\")[\n",
     "            3\n",
     "        ].replace(\"_vs_\", \"\"):\n",
     "            combine_df(deg_file, rmats_file)"
@@ -111,45 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "updating: data/08.intersection/ (stored 0%)\n",
-      "updating: data/08.intersection/AB/ (stored 0%)\n",
-      "updating: data/08.intersection/AB/AB_SE.txt (deflated 87%)\n",
-      "updating: data/08.intersection/AB/AB_MXE.txt (deflated 82%)\n",
-      "updating: data/08.intersection/AB/AB_A3SS.txt (deflated 85%)\n",
-      "updating: data/08.intersection/AB/AB_A5SS.txt (deflated 84%)\n",
-      "updating: data/08.intersection/AB/AB_RI.txt (deflated 80%)\n",
-      "updating: data/08.intersection/BC/ (stored 0%)\n",
-      "updating: data/08.intersection/BC/BC_SE.txt (deflated 88%)\n",
-      "updating: data/08.intersection/BC/BC_MXE.txt (deflated 83%)\n",
-      "updating: data/08.intersection/BC/BC_A3SS.txt (deflated 86%)\n",
-      "updating: data/08.intersection/BC/BC_A5SS.txt (deflated 85%)\n",
-      "updating: data/08.intersection/BC/BC_RI.txt (deflated 81%)\n",
-      "updating: data/08.intersection/AC/ (stored 0%)\n",
-      "updating: data/08.intersection/AC/AC_SE.txt (deflated 87%)\n",
-      "updating: data/08.intersection/AC/AC_MXE.txt (deflated 82%)\n",
-      "updating: data/08.intersection/AC/AC_A3SS.txt (deflated 85%)\n",
-      "updating: data/08.intersection/AC/AC_A5SS.txt (deflated 83%)\n",
-      "updating: data/08.intersection/AC/AC_RI.txt (deflated 80%)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['cp', '-r', './data/08.intersection', './results/'], returncode=0)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# put all AB_ files into one folder, all BC_ files into another folder, etc.\n",
     "# create the folders\n",
