--- a/codes/08.intersection.ipynb
+++ b/codes/08.intersection.ipynb
@@ -58,12 +58,12 @@
     "    deg_filename = (\n",
     "        os.path.basename(deg_file_path).replace(\"DEG_DESeq2_\", \"\").replace(\".tsv\", \"\")\n",
     "    )\n",
-    "    rmats_filename = os.path.basename(rmats_file_path).replace(\"MATS.JCEC.\", \"\")\n",
+    "    rmats_filename = os.path.basename(rmats_file_path)\n",
     "    # create the output filename\n",
     "    output_filename = f\"{deg_filename}_{rmats_filename}\"\n",
     "\n",
     "    # save the results to ./data/08.intersection\n",
-    "    output_path = os.path.join(\"./data/08.intersection\", output_filename)\n",
+    "    output_path = os.path.join(\"./data/08.intersection/only_DEG_down\", output_filename)\n",
     "    df.to_csv(output_path, sep=\"\\t\", index=False)\n",
     "\n",
     "\n",
@@ -79,19 +79,25 @@
     "deg_files = [\n",
     "    os.path.join(\"./data/07.DEG\", f)\n",
     "    for f in os.listdir(\"./data/07.DEG\")\n",
-    "    if f.startswith(\"DEG_DESeq2\") and f.endswith(\".tsv\")\n",
+    "    if f.startswith(\"DEG_DESeq2\") and f.endswith(\"down.tsv\")\n",
     "]\n",
     "# get a list of all rMATS files in ./data/06.rMATs\n",
-    "\n",
     "rmats_files = [\n",
     "    os.path.join(root, f)\n",
     "    for root, dirs, files in os.walk(\"./data/06.rMATs\")\n",
     "    for f in files\n",
-    "    if f.endswith(\"JCEC.txt\")\n",
+    "    if f.endswith(\".tsv\")\n",
+    "]\n",
+    "# separate rmats_files into up.tsv and down.tsv\n",
+    "rmats_files_up = [\n",
+    "    f for f in rmats_files if f.endswith(\"up.tsv\")\n",
+    "]\n",
+    "rmats_files_down = [\n",
+    "    f for f in rmats_files if f.endswith(\"down.tsv\")\n",
     "]\n",
     "\n",
-    "if not os.path.exists(\"./data/08.intersection\"):\n",
-    "    os.makedirs(\"./data/08.intersection\")\n",
+    "if not os.path.exists(\"./data/08.intersection/only_DEG_down\"):\n",
+    "    os.makedirs(\"./data/08.intersection/only_DEG_down\")\n",
     "# process deg_files containing AB with rmats_files containing A_vs_B, process deg_files containing AC with rmats_files containing A_vs_C, etc.\n",
     "for deg_file in deg_files:\n",
     "    for rmats_file in rmats_files:\n",
@@ -147,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
